# pix-downdetector-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: brightdata_proxy.md  dynatrace_setup.md  metrics_reference.md
src/downdetector_monitor/: __init__.py  monitor.py
tests/: test_dynatrace.py  test_monitor.py  test_utils.py
